# enclava

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  test_debugging.py  verify_security_removal.py
backend/: .flake8  Dockerfile  Dockerfile.migrate  Dockerfile.prod  alembic.ini  pyproject.toml  requirements.txt  test_llm_no_security.py  verify_agent_fixes.py
backend/alembic/: env.py
backend/alembic/versions/: 000_consolidated_ground_truth_schema.py  001_add_roles_table.py  001_initial_schema.py  002_add_rag_collections_and_documents_tables.py  002_add_tools_tables.py  003_add_notifications_tables.py  003_fix_budget_and_usage_tracking_columns.py  004_add_api_key_budget_fields.py  004_add_force_password_change.py  005_add_prompt_templates.py  005_fix_user_nullable_columns.py  006_add_source_url_to_rag_docs.py  007_add_chatbot_tool_support.py  008_add_agent_configs.py  009_add_chatbot_api_key_support.py  009_add_mcp_servers.py  010_add_mcp_api_key_header_name.py  010_add_workflow_tables_only.py  011_agent_temperature_to_float.py  012_rename_api_key_encrypted.py  013_add_responses_and_conversations.py  014_add_allowed_agents_to_api_keys.py  015_add_agent_conversations_and_messages.py  016_remove_agent_display_name.py  8bf097417ff0_add_chatbot_tables.py  9645f764a517_add_zammad_integration_tables.py  f7af0923d38b_merge_prompt_templates_and_chatbot_api_.py  fd999a559a35_fix_missing_user_columns.py
backend/app/: __init__.py  main.py
backend/app/api/: health.py  rag_debug.py
backend/app/core/: cache.py  config.py  logging.py  permissions.py  security.py  threat_detection.py
backend/app/db/: database.py
backend/app/middleware/: analytics.py  audit_middleware.py  debugging.py  rate_limiting.py  security.py
backend/app/models/: __init__.py  agent_config.py  budget.py  (+18 more)
backend/scripts/: cleanup_orphaned_plugin.py  import_jsonl.py  migrate.sh
backend/tests/: __init__.py  conftest.py  integration_test.py  performance_benchmark.py  requirements-test.txt  run_linting_docker.sh  simple_integration_test.sh  simple_llm_test.py  test_api_endpoints.py  test_auth_security.py  test_database_models.py  test_hotreload.py  test_modules.py  test_rag_integration.py  test_responses_api.py
(+377 files in other folders)
